force-app/main/default/objects/PreAdmission__c/PreAdmission__c.object-meta.xml
<CustomObject>
    <description>The Pre-Admission object stores auditable snapshots of patient intake data linked to Contact. It captures identity, contact, urgent contact, employer, insurance, Status, Submitted At, and Form Version. Restricted picklists preserve controlled values. Commonly used for pre-admission submission history and review.</description>
    <label>Pre-Admission</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Pre-Admission Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre-Admissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>