force-app/main/default/objects/PreAdmission__c/fields/AVS_Number__c.field-meta.xml
<CustomField>
    <fullName>AVS_Number__c</fullName>
    <label>AVS Number</label>
    <description>Preserves the sensitive AVS identifier submitted during pre-admission.</description>
    <inlineHelpText>Enter the AVS number as provided; keep this sensitive value as text.</inlineHelpText>
    <length>20</length>
    <type>Text</type>
</CustomField>