force-app/main/default/objects/PreAdmission__c/fields/Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Number__c</fullName>
    <label>Card Number</label>
    <description>Preserves the sensitive insurance card identifier submitted during pre-admission.</description>
    <inlineHelpText>Enter the card number as provided; keep this sensitive value as text.</inlineHelpText>
    <length>64</length>
    <type>Text</type>
</CustomField>