force-app/main/default/objects/PreAdmission__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <description>Links the pre-admission snapshot to the patient Contact who submitted it.</description>
    <inlineHelpText>Select the patient Contact associated with this pre-admission record.</inlineHelpText>
    <deleteConstraint>Restrict</deleteConstraint>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pre-Admissions</relationshipLabel>
    <relationshipName>PreAdmissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>