force-app/main/default/objects/PreAdmission__c/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <label>Date Of Birth</label>
    <description>Preserves the patient's date of birth from the submitted pre-admission form.</description>
    <inlineHelpText>Enter the patient's date of birth.</inlineHelpText>
    <type>Date</type>
</CustomField>