force-app/main/default/objects/PreAdmission__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <label>Employer</label>
    <description>Preserves the employer name captured in the pre-admission employer snapshot.</description>
    <inlineHelpText>Enter the patient's employer name.</inlineHelpText>
    <length>255</length>
    <type>Text</type>
</CustomField>