force-app/main/default/objects/PreAdmission__c/fields/Employer_City__c.field-meta.xml
<CustomField>
    <fullName>Employer_City__c</fullName>
    <label>Employer City</label>
    <description>Preserves the employer city as part of the pre-admission snapshot.</description>
    <inlineHelpText>Enter the employer city; this does not replace the patient's mailing city.</inlineHelpText>
    <length>80</length>
    <type>Text</type>
</CustomField>