force-app/main/default/objects/PreAdmission__c/fields/Employer_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Employer_Postal_Code__c</fullName>
    <label>Employer Postal Code</label>
    <description>Preserves the employer postal code in the pre-admission snapshot without numeric conversion.</description>
    <inlineHelpText>Enter the employer postal code, preserving leading zeroes and non-numeric characters.</inlineHelpText>
    <length>20</length>
    <type>Text</type>
</CustomField>