force-app/main/default/objects/PreAdmission__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <label>First Name</label>
    <description>Preserves the patient's first name at the time of pre-admission.</description>
    <inlineHelpText>Enter the patient's first name as provided on the form.</inlineHelpText>
    <length>80</length>
    <type>Text</type>
</CustomField>