force-app/main/default/objects/PreAdmission__c/fields/Form_Version__c.field-meta.xml
<CustomField>
    <fullName>Form_Version__c</fullName>
    <label>Form Version</label>
    <description>Preserves the form or schema version used to collect this snapshot.</description>
    <inlineHelpText>Enter the form version used for this pre-admission submission.</inlineHelpText>
    <length>20</length>
    <type>Text</type>
</CustomField>