force-app/main/default/objects/PreAdmission__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <description>Stores the gender captured in the pre-admission identity snapshot.</description>
    <inlineHelpText>Select the gender provided by the patient.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Male</fullName><default>false</default><label>Male</label></value>
            <value><fullName>Female</fullName><default>false</default><label>Female</label></value>
            <value><fullName>Not Listed</fullName><default>false</default><label>Not Listed</label></value>
            <value><fullName>Nonbinary</fullName><default>false</default><label>Nonbinary</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>