force-app/main/default/objects/PreAdmission__c/fields/Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider__c</fullName>
    <label>Insurance Provider</label>
    <description>Preserves the insurance provider named in the pre-admission insurance snapshot.</description>
    <inlineHelpText>Enter the patient's insurance provider.</inlineHelpText>
    <length>255</length>
    <type>Text</type>
</CustomField>