force-app/main/default/objects/PreAdmission__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <label>Last Name</label>
    <description>Preserves the patient's last name at the time of pre-admission.</description>
    <inlineHelpText>Enter the patient's last name as provided on the form.</inlineHelpText>
    <length>80</length>
    <type>Text</type>
</CustomField>