force-app/main/default/objects/PreAdmission__c/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <label>Mailing City</label>
    <description>Preserves the patient's mailing city from the pre-admission contact details.</description>
    <inlineHelpText>Enter the patient's mailing city.</inlineHelpText>
    <length>80</length>
    <type>Text</type>
</CustomField>