force-app/main/default/objects/PreAdmission__c/fields/Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State__c</fullName>
    <label>Mailing State</label>
    <description>Preserves the patient's mailing state from the pre-admission contact details.</description>
    <inlineHelpText>Enter the patient's mailing state.</inlineHelpText>
    <length>80</length>
    <type>Text</type>
</CustomField>