force-app/main/default/objects/PreAdmission__c/fields/Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street__c</fullName>
    <label>Mailing Street</label>
    <description>Preserves the patient's mailing street from the pre-admission contact details.</description>
    <inlineHelpText>Enter the patient's mailing street.</inlineHelpText>
    <length>255</length>
    <type>Text</type>
</CustomField>