force-app/main/default/objects/PreAdmission__c/fields/Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status__c</fullName>
    <label>Marital Status</label>
    <description>Stores the marital status captured in the pre-admission identity snapshot.</description>
    <inlineHelpText>Select the marital status provided by the patient.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Single</fullName><default>false</default><label>Single</label></value>
            <value><fullName>Married</fullName><default>false</default><label>Married</label></value>
            <value><fullName>Divorced</fullName><default>false</default><label>Divorced</label></value>
            <value><fullName>Widowed</fullName><default>false</default><label>Widowed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>