force-app/main/default/objects/PreAdmission__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <label>Nationality</label>
    <description>Preserves the patient's nationality at the time of pre-admission.</description>
    <inlineHelpText>Enter the patient's nationality.</inlineHelpText>
    <length>80</length>
    <type>Text</type>
</CustomField>