force-app/main/default/objects/PreAdmission__c/fields/Place_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Place_Of_Birth__c</fullName>
    <label>Place Of Birth</label>
    <description>Preserves the place of birth provided in the pre-admission identity snapshot.</description>
    <inlineHelpText>Enter the patient's place of birth.</inlineHelpText>
    <length>255</length>
    <type>Text</type>
</CustomField>