force-app/main/default/objects/PreAdmission__c/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <label>Profession</label>
    <description>Stores the profession category captured in the pre-admission employer section.</description>
    <inlineHelpText>Select the profession category provided by the patient.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Employee</fullName><default>false</default><label>Employee</label></value>
            <value><fullName>Self_employed</fullName><default>false</default><label>Self-employed</label></value>
            <value><fullName>Student</fullName><default>false</default><label>Student</label></value>
            <value><fullName>Retired</fullName><default>false</default><label>Retired</label></value>
            <value><fullName>Unemployed</fullName><default>false</default><label>Unemployed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>