force-app/main/default/objects/PreAdmission__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <label>Salutation</label>
    <description>Stores the salutation captured in the pre-admission identity snapshot.</description>
    <inlineHelpText>Select the salutation provided by the patient.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Mr.</fullName><default>false</default><label>Mr.</label></value>
            <value><fullName>Ms.</fullName><default>false</default><label>Ms.</label></value>
            <value><fullName>Mx.</fullName><default>false</default><label>Mx.</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>