force-app/main/default/objects/PreAdmission__c/fields/Submitted_At__c.field-meta.xml
<CustomField>
    <fullName>Submitted_At__c</fullName>
    <label>Submitted At</label>
    <description>Records when the completed pre-admission submission was submitted.</description>
    <inlineHelpText>Enter the date and time when the final submission succeeds.</inlineHelpText>
    <type>DateTime</type>
</CustomField>