force-app/main/default/objects/PreAdmission__c/fields/Supplementary_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Supplementary_Insurance__c</fullName>
    <label>Supplementary Insurance</label>
    <description>Preserves the supplementary insurance information from the pre-admission form.</description>
    <inlineHelpText>Enter the patient's supplementary insurance details.</inlineHelpText>
    <length>255</length>
    <type>Text</type>
</CustomField>