force-app/main/default/objects/PreAdmission__c/fields/Telephone__c.field-meta.xml
<CustomField>
    <fullName>Telephone__c</fullName>
    <label>Telephone</label>
    <description>Preserves the patient's telephone number from the submitted contact details.</description>
    <inlineHelpText>Enter the patient's telephone number.</inlineHelpText>
    <type>Phone</type>
</CustomField>