force-app/main/default/objects/PreAdmission__c/fields/Urgent_Contact_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Urgent_Contact_Relationship__c</fullName>
    <label>Urgent Contact Relationship</label>
    <description>Preserves the relationship to the urgent contact supplied during pre-admission.</description>
    <inlineHelpText>Enter the urgent contact's relationship to the patient.</inlineHelpText>
    <length>80</length>
    <type>Text</type>
</CustomField>