force-app/main/default/objects/PreAdmission__c/fields/Urgent_Contact_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Urgent_Contact_Telephone__c</fullName>
    <label>Urgent Contact Telephone</label>
    <description>Preserves the urgent contact telephone number from the pre-admission form.</description>
    <inlineHelpText>Enter the urgent contact's telephone number.</inlineHelpText>
    <type>Phone</type>
</CustomField>